@@ -310,6 +310,14 @@ validate_sort_and_sortorder('name',ZBX_SORT_UP);
 // goButton name is necessary!!!
 		$goButton = new CButton('goButton',S_GO);
 		$goButton->setAttribute('id','goButton');
+
+                $jsLocale = array(
+                                'S_CLOSE',
+                                'S_NO_ELEMENTS_SELECTES'
+                );
+
+                zbx_addJSLocale($jsLocale);
+
 		zbx_add_post_js('chkbxRange.pageGoName = "scripts";');
 
 		$table->setFooter(new CCol(array($goBox, $goButton)));
