@@ -505,6 +505,13 @@ include_once('include/page_header.php');
 		$goButton = new CButton('goButton', S_GO);
 		$goButton->setAttribute('id','goButton');
 
+                $jsLocale = array(
+                                'S_CLOSE',
+                                'S_NO_ELEMENTS_SELECTES'
+                );
+
+                zbx_addJSLocale($jsLocale);
+
 		zbx_add_post_js('chkbxRange.pageGoName = "group_userid";');
 		$footer = get_table_header(array($goBox, $goButton));
 //----
