@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1763] applied patch with translation for some javascript strings (Aly)
  - [ZBX-1654] fixed disabled trigger map icon (Aly)
  - [ZBX-1653] fixed link from maps to events (Aly)
  - [ZBX-1164] improved error messaging in regexp form (Aly)
